--- a/mobile_app_analysis.ipynb
+++ b/mobile_app_analysis.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1106,6 +1106,338 @@
    "metadata": {},
    "source": [
     "Similarly, other examples with potential are Weather, Food and Drink and Finance apps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Data from Google Play store**\n",
+    "The install numbers of the Google Play store are often open-ended. Therefore the numbers will likely be incorrect as it is not known whether an app with 10,000+ installs has 11,000, 20,000 or 40,000 installs. As perfect precision is not needed for the purpose of this project, this is left unchanged. Therefore an app with 10,000+ installs will have only 10,000 installs in the used dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,000,000+ : 15.726534296028879\n",
+      "100,000+ : 11.552346570397113\n",
+      "10,000,000+ : 10.548285198555957\n",
+      "10,000+ : 10.198555956678701\n",
+      "1,000+ : 8.393501805054152\n",
+      "100+ : 6.915613718411552\n",
+      "5,000,000+ : 6.825361010830325\n",
+      "500,000+ : 5.561823104693141\n",
+      "50,000+ : 4.7721119133574\n",
+      "5,000+ : 4.512635379061372\n",
+      "10+ : 3.5424187725631766\n",
+      "500+ : 3.2490974729241873\n",
+      "50,000,000+ : 2.3014440433213\n",
+      "100,000,000+ : 2.1322202166064983\n",
+      "50+ : 1.917870036101083\n",
+      "5+ : 0.78971119133574\n",
+      "1+ : 0.5076714801444043\n",
+      "500,000,000+ : 0.2707581227436823\n",
+      "1,000,000,000+ : 0.22563176895306858\n",
+      "0+ : 0.04512635379061372\n",
+      "0 : 0.01128158844765343\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_table(free_android, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COMMUNICATION : 38456119\n",
+      "VIDEO_PLAYERS : 24727872\n",
+      "SOCIAL : 23253652\n",
+      "PHOTOGRAPHY : 17840110\n",
+      "PRODUCTIVITY : 16787331\n",
+      "GAME : 15588016\n",
+      "TRAVEL_AND_LOCAL : 13984078\n",
+      "ENTERTAINMENT : 11640706\n",
+      "TOOLS : 10801391\n",
+      "NEWS_AND_MAGAZINES : 9549178\n",
+      "BOOKS_AND_REFERENCE : 8767812\n",
+      "SHOPPING : 7036877\n",
+      "PERSONALIZATION : 5201483\n",
+      "WEATHER : 5074486\n",
+      "HEALTH_AND_FITNESS : 4188822\n",
+      "MAPS_AND_NAVIGATION : 4056942\n",
+      "FAMILY : 3695642\n",
+      "SPORTS : 3638640\n",
+      "ART_AND_DESIGN : 1986335\n",
+      "FOOD_AND_DRINK : 1924898\n",
+      "EDUCATION : 1833495\n",
+      "BUSINESS : 1712290\n",
+      "LIFESTYLE : 1437816\n",
+      "FINANCE : 1387692\n",
+      "HOUSE_AND_HOME : 1331541\n",
+      "DATING : 854029\n",
+      "COMICS : 817657\n",
+      "AUTO_AND_VEHICLES : 647318\n",
+      "LIBRARIES_AND_DEMO : 638504\n",
+      "PARENTING : 542604\n",
+      "BEAUTY : 513152\n",
+      "EVENTS : 253542\n",
+      "MEDICAL : 120551\n"
+     ]
+    }
+   ],
+   "source": [
+    "category_column = {}\n",
+    "avg_usr = {}\n",
+    "\n",
+    "for app in free_android:\n",
+    "    category = app[1]\n",
+    "    if category in category_column:\n",
+    "        category_column[category] += 1\n",
+    "    else:\n",
+    "        category_column[category] = 1\n",
+    "\n",
+    "for category in category_column:\n",
+    "    total = 0\n",
+    "    len_category = 0\n",
+    "    for app in free_android:\n",
+    "        if app[1] == category:\n",
+    "            installs = app[5].replace('+','')\n",
+    "            installs = installs.replace(',', '')\n",
+    "            installs = float(installs)\n",
+    "            total += installs\n",
+    "            len_category += 1\n",
+    "    avg_usr[category] = total/len_category\n",
+    "    \n",
+    "table_display = []\n",
+    "\n",
+    "for key in avg_usr:\n",
+    "    key_val_as_tuple = (avg_usr[key], key)\n",
+    "    table_display.append(key_val_as_tuple)\n",
+    "\n",
+    "    table_sorted = sorted(table_display, reverse = True)\n",
+    "for entry in table_sorted:\n",
+    "        print(entry[1], ':', round(entry[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be determined that the `COMMUNICATION` category has the most number of installs, with an average of 38,456,119. This result is significantly skewed by WhatsApp Messenger with over 1,000,000,000 installs. Nonetheless, there are a great number of other applications in the same category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WhatsApp Messenger : 1,000,000,000+\n",
+      "imo beta free calls and text : 100,000,000+\n",
+      "Android Messages : 100,000,000+\n",
+      "Google Duo - High Quality Video Calls : 500,000,000+\n",
+      "Messenger – Text and Video Chat for Free : 1,000,000,000+\n",
+      "imo free video calls and chat : 500,000,000+\n",
+      "Skype - free IM & video calls : 1,000,000,000+\n",
+      "Who : 100,000,000+\n",
+      "GO SMS Pro - Messenger, Free Themes, Emoji : 100,000,000+\n",
+      "LINE: Free Calls & Messages : 500,000,000+\n",
+      "Google Chrome: Fast & Secure : 1,000,000,000+\n",
+      "Firefox Browser fast & private : 100,000,000+\n",
+      "UC Browser - Fast Download Private & Secure : 500,000,000+\n",
+      "Gmail : 1,000,000,000+\n",
+      "Hangouts : 1,000,000,000+\n",
+      "Messenger Lite: Free Calls & Messages : 100,000,000+\n",
+      "Kik : 100,000,000+\n",
+      "KakaoTalk: Free Calls & Text : 100,000,000+\n",
+      "Opera Mini - fast web browser : 100,000,000+\n",
+      "Opera Browser: Fast and Secure : 100,000,000+\n",
+      "Telegram : 100,000,000+\n",
+      "Truecaller: Caller ID, SMS spam blocking & Dialer : 100,000,000+\n",
+      "UC Browser Mini -Tiny Fast Private & Secure : 100,000,000+\n",
+      "Viber Messenger : 500,000,000+\n",
+      "WeChat : 100,000,000+\n",
+      "Yahoo Mail – Stay Organized : 100,000,000+\n",
+      "BBM - Free Calls & Messages : 100,000,000+\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in free_android:\n",
+    "    if app[1] == 'COMMUNICATION' and (app[5] == '1,000,000,000+' or\n",
+    "                                           app[5] == '500,000,000+' or \n",
+    "                                           app[5] == '100,000,000+'):\n",
+    "        print(app[0], ':', app[5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A similar pattern is visible in the `VIDEO_PLAYERS` category, with the app YouTube significantly skewing the result with over 1,000,000,000 installs. Again, there are a great number of other applications in this particular category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YouTube : 1,000,000,000+\n",
+      "Motorola Gallery : 100,000,000+\n",
+      "VLC for Android : 100,000,000+\n",
+      "Google Play Movies & TV : 1,000,000,000+\n",
+      "MX Player : 500,000,000+\n",
+      "Dubsmash : 100,000,000+\n",
+      "VivaVideo - Video Editor & Photo Movie : 100,000,000+\n",
+      "VideoShow-Video Editor, Video Maker, Beauty Camera : 100,000,000+\n",
+      "Motorola FM Radio : 100,000,000+\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in free_android:\n",
+    "    if app[1] == 'VIDEO_PLAYERS' and (app[5] == '1,000,000,000+' or\n",
+    "                                           app[5] == '500,000,000+' or \n",
+    "                                           app[5] == '100,000,000+'):\n",
+    "        print(app[0], ':', app[5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When taking a category in the middle of the pack a greater distribution of the install numbers appears to manifest with only a couple of apps to be very popular."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Google Play Books : 1,000,000,000+\n",
+      "Bible : 100,000,000+\n",
+      "Amazon Kindle : 100,000,000+\n",
+      "Wattpad 📖 Free Books : 100,000,000+\n",
+      "Audiobooks from Audible : 100,000,000+\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in free_android:\n",
+    "    if app[1] == 'BOOKS_AND_REFERENCE' and (app[5] == '1,000,000,000+' or\n",
+    "                                           app[5] == '500,000,000+' or \n",
+    "                                           app[5] == '100,000,000+'):\n",
+    "        print(app[0], ':', app[5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adjusting the criteria in this category shows that there are different niches within this category that still have quite some potential. In particular ebook readers and ebook versions of popular genres appear to be very popular."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wikipedia : 10,000,000+\n",
+      "Cool Reader : 10,000,000+\n",
+      "Book store : 1,000,000+\n",
+      "FBReader: Favorite Book Reader : 10,000,000+\n",
+      "Free Books - Spirit Fanfiction and Stories : 1,000,000+\n",
+      "AlReader -any text book reader : 5,000,000+\n",
+      "FamilySearch Tree : 1,000,000+\n",
+      "Cloud of Books : 1,000,000+\n",
+      "ReadEra – free ebook reader : 1,000,000+\n",
+      "Ebook Reader : 5,000,000+\n",
+      "Read books online : 5,000,000+\n",
+      "eBoox: book reader fb2 epub zip : 1,000,000+\n",
+      "All Maths Formulas : 1,000,000+\n",
+      "Ancestry : 5,000,000+\n",
+      "HTC Help : 10,000,000+\n",
+      "Moon+ Reader : 10,000,000+\n",
+      "English-Myanmar Dictionary : 1,000,000+\n",
+      "Golden Dictionary (EN-AR) : 1,000,000+\n",
+      "All Language Translator Free : 1,000,000+\n",
+      "Aldiko Book Reader : 10,000,000+\n",
+      "Dictionary - WordWeb : 5,000,000+\n",
+      "50000 Free eBooks & Free AudioBooks : 5,000,000+\n",
+      "Al-Quran (Free) : 10,000,000+\n",
+      "Al Quran Indonesia : 10,000,000+\n",
+      "Al'Quran Bahasa Indonesia : 10,000,000+\n",
+      "Al Quran Al karim : 1,000,000+\n",
+      "Al Quran : EAlim - Translations & MP3 Offline : 5,000,000+\n",
+      "Koran Read &MP3 30 Juz Offline : 1,000,000+\n",
+      "Hafizi Quran 15 lines per page : 1,000,000+\n",
+      "Quran for Android : 10,000,000+\n",
+      "Satellite AR : 1,000,000+\n",
+      "Oxford A-Z of English Usage : 1,000,000+\n",
+      "Dictionary.com: Find Definitions for English Words : 10,000,000+\n",
+      "English Dictionary - Offline : 10,000,000+\n",
+      "Bible KJV : 5,000,000+\n",
+      "NOOK: Read eBooks & Magazines : 10,000,000+\n",
+      "Brilliant Quotes: Life, Love, Family & Motivation : 1,000,000+\n",
+      "Stats Royale for Clash Royale : 1,000,000+\n",
+      "Dictionary : 10,000,000+\n",
+      "wikiHow: how to do anything : 1,000,000+\n",
+      "EGW Writings : 1,000,000+\n",
+      "My Little Pony AR Guide : 1,000,000+\n",
+      "Spanish English Translator : 10,000,000+\n",
+      "Dictionary - Merriam-Webster : 10,000,000+\n",
+      "JW Library : 10,000,000+\n",
+      "Oxford Dictionary of English : Free : 10,000,000+\n",
+      "English Hindi Dictionary : 10,000,000+\n",
+      "English to Hindi Dictionary : 5,000,000+\n"
+     ]
+    }
+   ],
+   "source": [
+    "for app in free_android:\n",
+    "    if app[1] == 'BOOKS_AND_REFERENCE' and (app[5] == '1,000,000+' or\n",
+    "                                           app[5] == '5,000,000+' or \n",
+    "                                           app[5] == '10,000,000+' or \n",
+    "                                           app[5] == '50,000,000+'):\n",
+    "        print(app[0], ':', app[5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Conclusions\n",
+    "In this project, data about the iOS app store and the Google Play store was analysed with the goal of determining a free English app profile that has a healthy profitability in both markets.\n",
+    "\n",
+    "In both markets, it appears as if an application that revolves around a popular book or book series would have some potential. Although there are a great variety of dictionaries and ebook readers, specific genres appear to be rather underpresented although still high in demand."
    ]
   },
   {
