--- a/mobile_app_analysis.ipynb
+++ b/mobile_app_analysis.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +44,7 @@
     "    \n",
     "    if rows_and_columns:\n",
     "        print('Number of rows: ', len(dataset))\n",
-    "        print('Number of columns: ', len(dataset[0]))\n",
-    "        print('\\n')"
+    "        print('Number of columns: ', len(dataset[0]))"
    ]
   },
   {
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -103,9 +102,7 @@
       "\n",
       "\n",
       "Number of rows:  10842\n",
-      "Number of columns:  13\n",
-      "\n",
-      "\n"
+      "Number of columns:  13\n"
      ]
     }
    ],
@@ -118,6 +115,7 @@
     "android = list(android_file)\n",
     "\n",
     "explore_data(ios, 0, 5, rows_and_columns = True, header = True)\n",
+    "print('\\n')\n",
     "explore_data(android, 0, 5, rows_and_columns = True, header = True)"
    ]
   },
